--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
             <nav id="nav" data-aos="menu-area" data-aos-anchor-placement="bottom-top">
                 <a title="About" href="#about_anchor">About</a>
                 <a title="Timeline" href="#timeline_anchor">Data-Structures</a>
-                <a title="Contact" href="#contact_anchor">Contact</a>
+                <a title="Contact" href="#contact_anchor">More</a>
             </nav>
 
             <video src="./assets/landing.mp4" loop muted autoplay></video>
@@ -130,7 +130,7 @@
 
                 <div class="register-button">
                     <div class="left"></div>
-                    <a title="Register" href="" target="_blank">Read Blogs</a>
+                    <a title="Register" href="blogs.html">Read Blogs</a>
                     <div class="right"></div>
                 </div>
 
@@ -155,7 +155,8 @@
                         </a>
                         <a title="About" href="#about_anchor">About</a>
                         <a title="Timeline" href="#timeline_anchor">Data-Structures</a>
-                        <a title="Contact" href="#contact_anchor">Contact Us</a>
+                        <a title="Contact" href="#contact_anchor">More</a>
+                        <a title="Blogs" href="blogs.html">Blogs</a>
                     </div>
                 </div>
                 <!-- sidebar -->
@@ -429,7 +430,7 @@
                     <div class="p-5 sm:w-2/12 border-r">
                         <div>
                             <div class="mr-[200px] uppercase font-bold myfont">Explore</div>
-                            
+
                             <ul class="mr-[100px]">
                                 <li class="my-2">
                                     <a href="#">
@@ -449,7 +450,7 @@
                                     </a>
                                 </li>
                                 <li class="my-2">
-                                    <a href="#">
+                                    <a href="blogs.html">
                                         <span class="text-gray-400 hover:text-red-700">Blogs</span>
                                     </a>
                                 </li>
@@ -501,9 +502,9 @@
     </div>
 
 
-    <script src="./script.js"></script>
-    <script src="./particles.js"></script>
-    <script src="./app.js"></script>
+    <script src="./js/script.js"></script>
+    <script src="./js/particles.js"></script>
+    <script src="./js/app.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@10.10.1/dist/sweetalert2.all.min.js"></script>
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script>
