--- a/index.html
+++ b/index.html
@@ -93,17 +93,11 @@
     </div>
 
     <div class="well" id="well">
-
-        <!-- <a href="#top" title="Back to top">
-            <button id="back-to-top-btn">
-                <i class="fas fa-angle-double-up"></i>
-            </button>
-        </a> -->
-
         <div class="banner panel" id="top">
             <nav id="nav" data-aos="menu-area" data-aos-anchor-placement="bottom-top">
                 <a title="About" href="#about_anchor">About</a>
                 <a title="Timeline" href="#timeline_anchor">Data-Structures</a>
+                <a title="Blogs" href="blogs.html">Blogs</a>
                 <a title="Contact" href="#contact_anchor">More</a>
             </nav>
 
@@ -130,7 +124,7 @@
 
                 <div class="register-button">
                     <div class="left"></div>
-                    <a title="Register" href="blogs.html">Read Blogs</a>
+                    <a title="Register" href="visit.html">Visualize DatViz</a>
                     <div class="right"></div>
                 </div>
 
@@ -155,8 +149,8 @@
                         </a>
                         <a title="About" href="#about_anchor">About</a>
                         <a title="Timeline" href="#timeline_anchor">Data-Structures</a>
-                        <a title="Contact" href="#contact_anchor">More</a>
                         <a title="Blogs" href="blogs.html">Blogs</a>
+                        <a title="Contact" href="#contact_anchor">More</a>
                     </div>
                 </div>
                 <!-- sidebar -->
