--- a/index.html
+++ b/index.html
@@ -106,14 +106,16 @@
             <div class="overlay"></div>
             <div class="heading">
 
-                <p class="new" style="margin-top: -200px; color: rgb(11, 195, 232); text-decoration: underline;">
+                <p class="new" style="margin-top: -250px; color: rgb(11, 195, 232); text-decoration: underline;">
                     Data Structure Visualizer
                 </p>
 
                 <div class="custom-container">
-                    <p class="custom-paragraph">Data structures are like the blueprints of information organization in
+                    <p class="mt-[-50px] custom-paragraph">Data structures are like the blueprints of information
+                        organization in
                         computer science. <br> They provide the foundation for storing and managing data effectively,
                         whether it's a list of numbers, a network of connections, or a <br> hierarchical arrangement.
+                        <br>
                         <br> By understanding and leveraging different data structures like arrays, linked lists, trees,
                         and graphs, developers can <br> optimize algorithms and design systems that handle data more
                         efficiently, leading to faster performance and better scalability.<br> In essence, data
@@ -136,7 +138,7 @@
             <div class="about panel" id="about_anchor">
 
                 <!-- sidebar -->
-                <div class="nav-checkbox">
+                <!-- <div class="nav-checkbox">
                     <input type="checkbox" id="check" />
                     <label for="check">
                         <i class="fas fa-bars" id="btn"></i>
@@ -152,7 +154,7 @@
                         <a title="Blogs" href="blogs.html">Blogs</a>
                         <a title="Contact" href="#contact_anchor">More</a>
                     </div>
-                </div>
+                </div> -->
                 <!-- sidebar -->
 
                 <!-- about -->
