--- a/visit.html
+++ b/visit.html
@@ -21,7 +21,7 @@
                 </div>
             </a>
             <div class="container grid grid-cols-12 mx-auto">
-                <div class="flex flex-col justify-center col-span-12 align-middle bg-no-repeat bg-cover bg-gray-400 lg:col-span-6 lg:h-auto"
+                <div class="flex flex-col justify-center col-span-12 align-middle bg-no-repeat bg-cover bg-gray-300 lg:col-span-6 lg:h-auto"
                     style="background-image: url('./assets/footerbg.gif'); background-position: center center; background-blend-mode: multiply; background-size: cover;">
                 </div>
 
@@ -112,7 +112,7 @@
                             <span class="text-2xl hey">Ordering, Arranging</span>
                         </h1>
 
-                        <a rel="noopener noreferrer" href="#"
+                        <a rel="noopener noreferrer" href="sort.html"
                             class="inline-flex items-center py-2 space-x-2 text-sm hi">
                             <span>Visualize</span>
                             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor"
