--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
             <nav id="nav" data-aos="menu-area" data-aos-anchor-placement="bottom-top">
                 <a title="About" href="#about_anchor">About</a>
                 <a title="Timeline" href="#timeline_anchor">Data-Structures</a>
-                <a title="Blogs" href="blogs.html">Blogs</a>
+                <a title="Blogs" href="Blogs/blogs.html">Blogs</a>
                 <a title="Contact" href="#contact_anchor">More</a>
             </nav>
 
@@ -106,7 +106,7 @@
             <div class="overlay"></div>
             <div class="heading">
 
-                <p class="new" style="margin-top: -250px; color: rgb(11, 195, 232); text-decoration: underline;">
+                <p class="new" style="margin-top: -250px; color: rgb(11, 195, 232);">
                     Data Structure Visualizer
                 </p>
 
@@ -124,11 +124,11 @@
                     </p>
                 </div>
 
-                <div class="register-button">
-                    <div class="left"></div>
-                    <a title="Register" href="visit.html">Visualize DatViz</a>
-                    <div class="right"></div>
-                </div>
+                <a href="visit.html">
+                    <div class="register-button">
+                        <a title="visual" href="Visual/visit.html">Visualize DatViz</a>
+                    </div>
+                </a>
 
             </div>
         </div>
@@ -136,27 +136,6 @@
 
         <div class="content">
             <div class="about panel" id="about_anchor">
-
-                <!-- sidebar -->
-                <!-- <div class="nav-checkbox">
-                    <input type="checkbox" id="check" />
-                    <label for="check">
-                        <i class="fas fa-bars" id="btn"></i>
-                        <i class="fas fa-times" id="cancel"></i>
-                    </label>
-                    <div class="sidebar">
-                        <header>Explore</header>
-                        <a title="Homepage" href="#top" class="active">
-                            <span>Homepage</span>
-                        </a>
-                        <a title="About" href="#about_anchor">About</a>
-                        <a title="Timeline" href="#timeline_anchor">Data-Structures</a>
-                        <a title="Blogs" href="blogs.html">Blogs</a>
-                        <a title="Contact" href="#contact_anchor">More</a>
-                    </div>
-                </div> -->
-                <!-- sidebar -->
-
                 <!-- about -->
                 <img id="astronaut" alt="astronaut" src="./assets/astronaut.webp">
 
@@ -412,8 +391,6 @@
     </div>
     </div>
     </div>
-
-
     </div>
 
     <!-- Footer -->
@@ -441,7 +418,7 @@
                                 </li>
 
                                 <li class="my-2">
-                                    <a class="" href="#timeline_anchor">
+                                    <a href="#timeline_anchor">
                                         <span class="text-gray-400 hover:text-red-700">Data-Structures</span>
                                     </a>
                                 </li>
@@ -476,11 +453,10 @@
                 </div>
                 <section class="">
                     <div class="flex py-5 m-auto text-gray-800 text-sm flex-col items-center border-t max-w-screen-xl">
+
                         <div class="md:flex-auto md:flex-row-reverse mt-2 flex-row ml-[-56px] flex">
-
-
-
                         </div>
+
                         <div class="my-6 ml-[-56px] font-bold text-white">© DatViz.
                             <span class="text-gray-400">All Rights Reserved.</span>
                         </div>
@@ -496,7 +472,6 @@
 
     </footer>
     </div>
-
 
     <script src="./js/script.js"></script>
     <script src="./js/particles.js"></script>
