--- a/Visual/visit.html
+++ b/Visual/visit.html
@@ -63,7 +63,7 @@
                         <h1 class="text-3xl myfont font-bold">LinkedList
                             <span class="text-2xl hey">Node-based, Dynamic</span>
                         </h1>
-                        <a rel="noopener noreferrer" href="#"
+                        <a rel="noopener noreferrer" href="../LL/index.html"
                             class="inline-flex items-center py-2 space-x-2 text-sm hi">
                             <span>Visualize</span>
                             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor"
