--- a/Tree/index.html
+++ b/Tree/index.html
@@ -13,10 +13,16 @@
 
 <body>
     <div class="container">
+        <a href="../Visual/visit.html">
+            <div class="arrows">
+                <span></span>
+                <span></span>
+                <!-- <span></span> -->
+            </div>
+        </a>
         <h1>Tree Visualization</h1>
         <div class="findContainer"></div>
-        <textarea oninput="action()" type="number" 
-        placeholder='Enter an array which is separated with space. The root is first element.
+        <textarea oninput="action()" type="number" placeholder='Enter an array which is separated with space. The root is first element.
 Ex: 15 9 11 3 70' id="inp" cols="30" rows="10"></textarea>
         <div class="btn-container">
             <button class="btn-clear" onclick="clearAndCreate()">Clear</button>
