--- a/Visual/visit.html
+++ b/Visual/visit.html
@@ -42,7 +42,7 @@
                             </svg>
                         </a>
                     </div>
-
+                    <br>
                     <div class="pt-6 pb-4 space-y-2">
                         <h1 class="text-3xl myfont font-bold">Queue
                             <span class="text-2xl hey">FIFO (First In, First Out)</span>
@@ -58,7 +58,7 @@
                             </svg>
                         </a>
                     </div>
-
+                    <br>
                     <div class="pt-6 pb-4 space-y-2">
                         <h1 class="text-3xl myfont font-bold">LinkedList
                             <span class="text-2xl hey">Node-based, Dynamic</span>
@@ -74,12 +74,12 @@
                             </svg>
                         </a>
                     </div>
-
+                    <br>
                     <div class="pt-6 pb-4 space-y-2">
                         <h1 class="text-3xl myfont font-bold">Trees
                             <span class="text-2xl hey">Hierarchical, Nodes</span>
                         </h1>
-                        <a rel="noopener noreferrer" href="#"
+                        <a rel="noopener noreferrer" href="../Tree/index.html"
                             class="inline-flex items-center py-2 space-x-2 text-sm hi">
                             <span>Visualize</span>
                             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor"
@@ -90,23 +90,7 @@
                             </svg>
                         </a>
                     </div>
-
-                    <div class="pt-6 pb-4 space-y-2">
-                        <h1 class="text-3xl myfont font-bold">Graph
-                            <span class="text-2xl hey">Vertices, Edges</span>
-                        </h1>
-                        <a rel="noopener noreferrer" href="#"
-                            class="inline-flex items-center py-2 space-x-2 text-sm hi">
-                            <span>Visualize</span>
-                            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor"
-                                class="w-4 h-4">
-                                <path fill-rule="evenodd"
-                                    d="M12.293 5.293a1 1 0 011.414 0l4 4a1 1 0 010 1.414l-4 4a1 1 0 01-1.414-1.414L14.586 11H3a1 1 0 110-2h11.586l-2.293-2.293a1 1 0 010-1.414z"
-                                    clip-rule="evenodd"></path>
-                            </svg>
-                        </a>
-                    </div>
-
+                    <br>
                     <div class="pt-6 pb-4 space-y-2">
                         <h1 class="text-3xl myfont font-bold">Sorting
                             <span class="text-2xl hey">Ordering, Arranging</span>
