--- a/Auth and Backend/index.html
+++ b/Auth and Backend/index.html
@@ -15,7 +15,7 @@
     <div class="forms-container">
       <div class="signin-signup">
         <form method="post" class="sign-in-form" action="index.php">
-          <h2 class="title">Sign in</h2>
+          <h2 class="title">Sign In</h2>
           <div class="input-field">
             <i class="fas fa-user"></i>
             <input name="username" type="text" placeholder="Username" />
@@ -25,24 +25,25 @@
             <input name="password" type="password" placeholder="Password" />
           </div>
           <input type="submit" name="login" value="Login" class="btn solid" />
-          <p class="social-text">Or Sign in with social platforms</p>
+          <br>
+          <!-- <p class="social-text">Or Sign in with social platforms</p> -->
           <div class="social-media">
-            <a href="#" class="social-icon">
-              <i class="fab fa-facebook-f"></i>
+            <a href="https://www.instagram.com/_siddharth.26_/" target="_blank" class="social-icon">
+              <i class="fab fa-instagram"></i>
             </a>
-            <a href="#" class="social-icon">
+            <a href="https://twitter.com/NerdySid24" target="_blank" class="social-icon">
               <i class="fab fa-twitter"></i>
             </a>
-            <a href="#" class="social-icon">
-              <i class="fab fa-google"></i>
+            <a href="https://github.com/sidj01sar26" target="_blank" class="social-icon">
+              <i class="fab fa-github"></i>
             </a>
-            <a href="#" class="social-icon">
+            <a href="https://www.linkedin.com/in/siddharth-joisar/" target="_blank" class="social-icon">
               <i class="fab fa-linkedin-in"></i>
             </a>
           </div>
         </form>
         <form method="post" class="sign-up-form" action="index.php">
-          <h2 class="title">Sign up</h2>
+          <h2 class="title">Sign Up</h2>
           <div class="input-field">
             <i class="fas fa-user"></i>
             <input required name="fullname" type="text" placeholder="Full Name" />
@@ -64,18 +65,19 @@
             <input name="confirm_password" required type="password" placeholder="Confirm Password" />
           </div>
           <input type="submit" name="register" class="btn" value="Sign up" />
-          <p class="social-text">Or Sign up with social platforms</p>
+          <br>
+          <!-- <p class="social-text">Or Sign up with social platforms</p> -->
           <div class="social-media">
-            <a href="#" class="social-icon">
-              <i class="fab fa-facebook-f"></i>
+            <a href="https://www.instagram.com/_siddharth.26_/" target="_blank" class="social-icon">
+              <i class="fab fa-instagram"></i>
             </a>
-            <a href="#" class="social-icon">
+            <a href="https://twitter.com/NerdySid24" target="_blank" class="social-icon">
               <i class="fab fa-twitter"></i>
             </a>
-            <a href="#" class="social-icon">
-              <i class="fab fa-google"></i>
+            <a href="https://github.com/sidj01sar26" target="_blank" class="social-icon">
+              <i class="fab fa-github"></i>
             </a>
-            <a href="#" class="social-icon">
+            <a href="https://www.linkedin.com/in/siddharth-joisar/" target="_blank" class="social-icon">
               <i class="fab fa-linkedin-in"></i>
             </a>
           </div>
@@ -88,28 +90,30 @@
         <div class="content">
           <h3>New here ?</h3>
           <p>
-            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Debitis,
-            ex ratione. Aliquid!
+            "Begin your journey with us - sign up now to unlock endless possibilities!"
           </p>
+          <br>
           <button class="btn transparent" id="sign-up-btn">
-            Sign up
+            Sign Up
           </button>
         </div>
         <img src="" class="image" alt="" />
       </div>
+
       <div class="panel right-panel">
         <div class="content">
           <h3>One of us ?</h3>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum
-            laboriosam ad deleniti.
+            "Seeking access? Log in now and delve into our platform's wealth of resources and opportunities."
           </p>
+          <br>
           <button class="btn transparent" id="sign-in-btn">
-            Sign in
+            Sign In
           </button>
         </div>
         <img src="" class="image" alt="" />
       </div>
+
     </div>
   </div>
 
